# CPP_Repository

./: .gitignore  README.md
Client_Server_automatic/: .gitignore  README.md
Client_Server_automatic/server/: CMakeLists.txt  Session.cpp  main.cpp  requests.proto  responses.proto
Client_Server_automatic/server/includes/: main_header.hpp  statistic_tools.hpp
Client_Server_automatic/server/utils/: statistic_tools.cpp
OpenGL/LearnOpenGL/Open_GL_1.0/Open_GL_1.0/: main.cpp
OpenGL/LearnOpenGL/Open_GL_1.0/Open_GL_1.0.xcodeproj/: project.pbxproj
OpenGL/LearnOpenGL/Open_GL_1.0/Open_GL_1.0.xcodeproj/project.xcworkspace/xcuserdata/jberegon.xcuserdatad/: UserInterfaceState.xcuserstate
OpenGL/LearnOpenGL/Open_GL_1.0/Open_GL_1.0.xcodeproj/xcuserdata/jberegon.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OpenGL/LearnOpenGL/Open_GL_1.0/Open_GL_1.0.xcodeproj/xcuserdata/jberegon.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenGL/LearnOpenGL/Open_GL_1.1/Open_GL_1.1/: main.cpp
OpenGL/LearnOpenGL/Open_GL_1.1/Open_GL_1.1.xcodeproj/: project.pbxproj
OpenGL/LearnOpenGL/Open_GL_1.1/Open_GL_1.1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenGL/LearnOpenGL/Open_GL_1.1/Open_GL_1.1.xcodeproj/project.xcworkspace/xcuserdata/jberegon.xcuserdatad/: UserInterfaceState.xcuserstate
OpenGL/LearnOpenGL/Open_GL_1.1/Open_GL_1.1.xcodeproj/xcshareddata/xcschemes/: Open_GL_1.1.xcscheme
OpenGL/LearnOpenGL/Open_GL_1.1/Open_GL_1.1.xcodeproj/xcuserdata/jberegon.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenGL/LearnOpenGL/Open_GL_1.2/Open_GL_1.2/: 3.3fragment_shader.txt  3.3vertex_shader.txt  Shader.cpp  Shader.hpp  main.cpp
OpenGL/LearnOpenGL/Open_GL_1.2/Open_GL_1.2.xcodeproj/: project.pbxproj
OpenGL/LearnOpenGL/Open_GL_1.2/Open_GL_1.2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenGL/LearnOpenGL/Open_GL_1.2/Open_GL_1.2.xcodeproj/project.xcworkspace/xcuserdata/jberegon.xcuserdatad/: UserInterfaceState.xcuserstate
OpenGL/LearnOpenGL/Open_GL_1.2/Open_GL_1.2.xcodeproj/xcshareddata/xcschemes/: Open_GL_1.2.xcscheme
OpenGL/LearnOpenGL/Open_GL_1.2/Open_GL_1.2.xcodeproj/xcuserdata/jberegon.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenGL/LearnOpenGL/Open_GL_1.3/Open_GL_1.3 (Texture)/: 3.3fragment_shader.txt  3.3vertex_shader.txt  Shader.cpp  Shader.hpp  main.cpp
OpenGL/LearnOpenGL/Open_GL_1.3/Open_GL_1.3 (Texture).xcodeproj/: project.pbxproj
OpenGL/LearnOpenGL/Open_GL_1.3/Open_GL_1.3 (Texture).xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenGL/LearnOpenGL/Open_GL_1.3/Open_GL_1.3 (Texture).xcodeproj/project.xcworkspace/xcuserdata/jberegon.xcuserdatad/: UserInterfaceState.xcuserstate
OpenGL/LearnOpenGL/Open_GL_1.3/Open_GL_1.3 (Texture).xcodeproj/xcshareddata/xcschemes/: Open_GL_1.2.xcscheme
algorithms/LeetCode/1385. Find the Distance Value Between Two Arrays/: main.cpp
algorithms/LeetCode/167. Two Sum II - Input Array Is Sorted/: main.cpp
algorithms/LeetCode/34. Find First and Last Position of Element in Sorted Array/: main.cpp
algorithms/LeetCode/35. Search Insert Position/: main.cpp
algorithms/LeetCode/367. Valid Perfect Square/: main.cpp
algorithms/LeetCode/69. Sqrt(x)/: main.cpp
algorithms/LeetCode/704. Binary Search/: main.cpp
algorithms/LeetCode/744. Find Smallest Letter Greater Than Target/: main.cpp
algorithms/LeetCode/852. Peak Index in a Mountain Array/: main.cpp
algorithms/LeetCode/Top Interview Questions/14. Longest Common Prefix/: main.cpp
algorithms/LeetCode/Top Interview Questions/20. Valid Parentheses/: main.cpp
algorithms/LeetCode/Top Interview Questions/21. Merge Two Sorted Lists/: main.cpp
algorithms/LeetCode/Top Interview Questions/26. Remove Duplicates from Sorted Array/: main.cpp
algorithms/LeetCode/Top Interview Questions/28. Implement strStr()/: main.cpp
algorithms/check_brackets/: main.cpp
algorithms/find_max_sequence/: a.out  main.cpp
algorithms/lists/two_numbers_sum/: main.cpp
algorithms/odd_duplicated_strings/: main.cpp
algorithms/quick_sort/: main.cpp
algorithms/select_sort/: main.cpp
client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
linked_list_serialization/: Data.cpp  Data.hpp  Deserializator.cpp  ListRand.cpp  Makefile  Serializator.cpp  main.cpp
linked_list_serialization/includes/: Colors.hpp  Deserializator.hpp  ListRand.hpp  Serializator.hpp  main_libs.hpp
server/: CMakeLists.txt  Server.cpp  Server.hpp  Session.cpp  Session.hpp  db.hpp  get_stats.cpp  main.cpp  main_header.hpp  tools.cpp  tools.hpp
server/includes/: Server.hpp  Session.hpp
server/utils/: get_stats.cpp  parse_functions.cpp
